--- a/store/templates/footer.html
+++ b/store/templates/footer.html
@@ -1,5 +1,34 @@
-<footer class="bg-dark text-white mt-5 p-5">
-    <div class="container">
-        <p class="lead text-center">Copyright &copy; 2019 Store</p>
-    </div>
-</footer>
+<!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="mt-5">
+
+    <footer class="text-center text-lg-start" style="background-color: rgba(36, 34, 34, 0.2);">
+        <div class="container d-flex justify-content-center py-5">
+            <a href="https://www.facebook.com/profile.php?id=100007513814577" type="button"
+                class="btn btn-primary btn-lg btn-floating mx-2" role="button" style="background-color: #54456b;">
+                <i class="fab fa-facebook-f">
+
+                </i>
+            </a>
+            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+                <i class="fab fa-youtube">
+
+                </i>
+            </button>
+            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+                <i class="fab fa-instagram"></i>
+            </button>
+            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+                <i class="fab fa-twitter"></i>
+            </button>
+        </div>
+
+        <!-- Copyright -->
+        <div class="text-center text-white p-3" style="background-color: black">
+            © 2020 Copyright:
+            <a class="text-white" href="https://mdbootstrap.com/">Biponi.com</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
+
+</div>
+<!-- End of .container -->
